# fork__oath-toolkit

./: AUTHORS  CONTRIBUTING.md  Makefile.am  NEWS  README.md  bootstrap  cfg.mk  configure.ac
gl/override/lib/: version-etc.c.diff
liboath/: Makefile.am  coding.c  configure.ac  errors.c  global.c  hotp.c  hotp.h  liboath.map  liboath.pc.in  oath.h.in  totp.c  usersfile.c
liboath/gl/override/lib/: base32.c.diff
liboath/gtk-doc/: liboath-docs.xml
liboath/man/: Makefile.am
liboath/tests/: Makefile.am  tst_basic.c  tst_coding.c  tst_errors.c  tst_fopen-wx.c  tst_fopen-wx.sh  tst_hotp_algo.c  tst_hotp_validate.c  tst_totp_algo.c  tst_totp_validate.c  tst_usersfile.c  tst_usersfile.sh
libpskc/: Makefile.am  README  build.c  configure.ac  container.c  enums.c  errors.c  global.c  internal.h  libpskc.map  libpskc.pc.in  output.c  parser.c  sign.c  validate.c
libpskc/examples/: Makefile.am  pskctool-h.txt
libpskc/gtk-doc/: Makefile.am  libpskc-docs.xml
libpskc/include/: Makefile.am
libpskc/include/pskc/: Makefile.am  container.h  enums.h  errors.h  exports.h  global.h  keypackage.h  pskc.h  version.h.in
libpskc/man/: Makefile.am
libpskc/schemas/: Makefile.am
libpskc/tests/: Makefile.am  libpskc.supp  tst_accessors.c  tst_basic.c  tst_errors.c  tst_invalidread.c  tst_setters.c  tst_validate.c
oathtool/: Makefile.am  oathtool.c  oathtool.ggo  oathtool.h2m
oathtool/tests/: Makefile.am  tst_hyphen.sh  tst_oathtool.sh
pam_oath/: Makefile.am  README  configure.ac  pam_oath.c
pam_oath/tests/: Makefile.am  expect.oath  run-root-tests.sh  test-pam_oath-root.c  test-pam_oath.c
pskctool/: Makefile.am  pskctool.c  pskctool.ggo  pskctool.h2m
pskctool/tests/: Makefile.am  tst_hyphen.sh  tst_libexamples.sh  tst_libexamples2.sh  tst_pskctool.sh  tst_roundtrip.sh  tst_sign.sh
website/: CVE-2024-47191.txt  build-website.sh  intro-1.txt  intro-2.txt
